--- a/src/component/views/styles/navigation.css
+++ b/src/component/views/styles/navigation.css
@@ -45,7 +45,7 @@ span{
 .second-nav{
     background-color: white;
     height: 70px;
-    position: sticky;
+    position: sticky !important;
     top: 0;
 }
 .logo{
