--- a/src/component/views/styles/navigation.css
+++ b/src/component/views/styles/navigation.css
@@ -44,7 +44,7 @@ span{
 }
 .second-nav{
     background-color: white;
-    height: 70px;
+    height: 55px;
     position: sticky !important;
     top: 0;
 }
@@ -61,7 +61,7 @@ li{
 }
 
 a{
-    text-decoration: none;
+    text-decoration: none !important;
     text-transform: capitalize;
     font-size: 16px;
     margin-left: 30px;
